cabal-version:      2.2
name:               loading
version:            0.1.0.0
category:           game
homepage:           https://github.com/noteed/loading/
synopsis:           Mmm.

common common-extensions
  default-language: Haskell2010
  default-extensions:
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StrictData
    TypeApplications
    TypeOperators

common common-options
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wmissing-export-lists
    -fno-warn-unused-do-bind
    +RTS -A256m -n4m -qg -RTS

-- Generating version bounds can be done with
--     nix-shell --run 'cabal freeze'
common common-dependencies
  build-depends:
      base >=4.7 && <5
    , linear
    , optparse-applicative
    , primitive
    , sdl2
    , sdl2-gfx
    , sdl2-image
    , text
    , vector

executable loading
  import: common-extensions, common-options, common-dependencies
  main-is: loading.hs
  hs-source-dirs: bin
  build-depends:
  ghc-options:
    -threaded
